@@ -1,3 +1,10 @@
+2007-09-10  Brian Palmer  <bpalmer@cs.nmsu.edu>
+
+	* color-theme.el (replace-in-string): Renamed to
+	color-theme-replace-in-string. This is either an alias to a
+	pre-existing replace-in-string, or an inline function call to
+	replace-regexp-in-string.
+
 2006-07-05  Brian Palmer  <bpalmer@gmail.com>
 
 	* color-theme.el (color-theme-libraries): Use
